--- a/home.html
+++ b/home.html
@@ -1,28 +1,3 @@
-<?php
-session_start();
- 
-$logged_in = false;
- 
-//jika session username belum dibuat, atau session username kosong
-if (isset($_SESSION['username']) || !empty($_SESSION['username'])) {
-    $logged_in = true;
-}
- 
-include_once('config.php');
-
-if($_POST["submit"]){
-	$username = $_POST["username"];
-	$password = $_POST["password"];
-	
-	$res=mysql_query("select * from member where username='".$username."' AND password='".$password."'");
-	if($row=mysqli_fetch_array($res)){
-		$logged_in = true;
-	}
-	else{
-	
-	}
-}
-?>
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 
@@ -34,49 +9,28 @@ if($_POST["submit"]){
 	<meta name="description" content="Card Expansion Effect with SVG clipPath" />
 	<meta name="keywords" content="clipPath, svg, effect, layout, expansion, images, grid, polygon" />
 	<meta name="author" content="Claudio Calautti for Codrops" />
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="img/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" type="text/css" href="css/demo.css" />
+	<link rel="stylesheet" type="text/css" href="css/demo-home.css" />
 	<link rel="stylesheet" type="text/css" href="css/card.css" />
 	<link rel="stylesheet" type="text/css" href="css/pattern.css" />
-    <script src="js/modernizr.custom.js"></script>
-
-		<link href='http://fonts.googleapis.com/css?family=Raleway:200,400,600' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
 	<!--[if IE]>
 	  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-    <style>
-		body{ background:url('background.png'); font-family: 'Arial'}
-		#logo{width: 644px; height:auto; margin:0 auto; margin-top:210px; }
-		#form_show{width: 644px; margin: 0 auto; margin-top: 30px;}
-		#form_show .forminput{ padding:10px 20px; border:none; font-size: 1.4em; width: 500px; margin: 5px; outline-color: #58ACFA; font-family: 'Open Sans Light'}
-		.button_login{ background: #58ACFA; color:white; padding:10px 20px; border:none; font-size: 1.4em; width: 500px; margin: 0px; outline: none; border-bottom: 5px solid #58ACFA; border-radius:5px; font-family: 'Open Sans Light'; }
-		.button_login:hover{ border-bottom:2px solid #2E64FE; margin-top: 3px; cursor: pointer; }
-	</style>
 	<script>
 	if (navigator.userAgent.toLowerCase().indexOf('firefox') > -1) {
 		var root = document.getElementsByTagName('html')[0];
 		root.setAttribute('class', 'ff');
 	};
 	</script>
-    <script type="text/javascript">
-	$(document).ready(function(){
-		$('#logo').fadeIn(1000);			
-			$('#logo').delay(300).animate({"margin-top":"140px"});
-			$('#logo').animate({"margin-top":"160px"});
-			$('#form_show').delay(1600).slideDown(300);
-	});
-</script>
-    <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 </head>
-<body class="demo-1">
+<body>
+<div class="demo-1">
 	<div class="container">
 		<header class="codrops-header">
 		      <img src="img/logo.png" >
 		</header>
-        <? if($logged_in == false){ ?>
 		<div class="content">
 			<!-- trianglify pattern container -->
 			<div class="pattern pattern--hidden"></div>
@@ -186,47 +140,12 @@ if($_POST["submit"]){
 			<!-- /cards -->
 		</div><!-- /content -->
 		<!-- Related demos -->
-        
 		<section class="content content--related">
-				<p>Log Out</p>
-            <div id="form_show" style="display:none">
-			</div>
+			<p>Log Out</p>
+           <!-- <div id="form_show" style="display:none">-->
+	</div>
 		</section>
 	</div>
-    <? } else{ ?>
-        <div class="content">
-        	<div class="container">
-			<!-- Top Navigation -->
-		
-<div class="container">
-			<div id="boxgallery" class="boxgallery" data-effect="effect-2">
-				<div class="panel"><img src="img/3.jpg" alt="Image 3"/></div>
-				<div class="panel"><img src="img/4.jpg" alt="Image 4"/></div>
-				<div class="panel"><img src="img/1.jpg" alt="Image 1"/></div>
-				<div class="panel"><img src="img/2.jpg" alt="Image 2"/></div>
-			</div>
-			<header class="codrops-header">
-                <div id="logo" style="display:none;">
-                    <img src="img/logo.png" >
-                </div>
-            </header>
-	<div id="form_show" style="display:none">
-		<table style="margin:0 auto;">
-			<tr>
-				<td><input type="text" name="username" placeholder="Username or Email" class="forminput"></td>
-			</tr>
-			<tr>
-				<td><input type="password" name="password" placeholder="Password" class="forminput"></td>
-			</tr>
-			<tr>
-				<td><input type="submit" name="submit" class="button_login" value="Login"></td>
-			</tr>
-		</table>
-	</div>
-</div>
-</div>
-    	</div>
-        <? } ?>
 	<!-- /container -->
 	<!-- JS -->
 	<script src="js/vendors/trianglify.min.js"></script>
@@ -235,15 +154,7 @@ if($_POST["submit"]){
 	<script src="js/vendors/cash.min.js"></script>
 	<script src="js/Card-circle.js"></script>
 	<script src="js/demo.js"></script>
+</div>
 </body>
 
- 		</nav>
-	
-    
-</div><!-- /container -->
-<script src="js/classie.js"></script>
-<script src="js/boxesFx.js"></script>
-<script>
-    new BoxesFx( document.getElementById( 'boxgallery' ) );
-</script>
 </html>
